Complentado el acceso a detalle del modulo comprado y validancion excepciones de ERROR